--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "gatsby-starter-blog",
+  "name": "podtemacom",
   "private": true,
-  "description": "A starter for a blog powered by Gatsby and Markdown",
+  "description": "Evergreen Podcast website",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Artem Rosnovsky <artem@rosnovsky.us>",
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/rosnovsky/podtemacom/issues"
   },
   "dependencies": {
     "gatsby": "^2.13.31",
@@ -38,15 +38,15 @@
   "devDependencies": {
     "prettier": "^1.18.2"
   },
-  "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
+  "homepage": "https://podtema.com",
   "keywords": [
-    "gatsby"
+    "podcast"
   ],
   "license": "MIT",
   "main": "n/a",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gatsbyjs/gatsby-starter-blog.git"
+    "url": "git+https://github.com/rosnovsky/podtemacom"
   },
   "scripts": {
     "build": "gatsby build",
