--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
             - ./node_modules
       - run:
           name: Prettier
-          command: ./node_modules/.bin/prettier --print-width=100 --trailing-comma=es5 --list-different './src/**/*.{js,jsx,ts,tsx}'
+          command: ./node_modules/.bin/prettier --semi=true --single-quote=true --trailing-comma=es5 --check './src/**/*.{js,jsx,ts,tsx}'
 
 workflows:
   version: 2
