CircleCI master branch filter removed

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,4 @@ workflows:
   version: 2
   tests:
     jobs:
-      - linter:
-          filters:
-            branches:
-              ignore: master
+      - linter
