--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "test": "jest && codecov",
+    "test": "jest --coverage && codecov",
     "lint": "eslint src/**/*.js",
     "lint:fix": "eslint --fix *.js src/**/*.js"
   },
