--- a/package.json
+++ b/package.json
@@ -8,33 +8,29 @@
     "url": "https://github.com/rosnovsky/podtemacom/issues"
   },
   "dependencies": {
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-env": "^7.6.3",
     "codecov": "^3.6.1",
     "eslint-config-prettier": "^6.4.0",
     "eslint-plugin-prettier": "^3.1.1",
-    "gatsby": "^2.13.31",
-    "gatsby-cli": "^2.7.29",
-    "gatsby-image": "^2.2.6",
-    "gatsby-plugin-feed": "^2.3.4",
-    "gatsby-plugin-google-analytics": "^2.1.4",
-    "gatsby-plugin-manifest": "^2.2.3",
-    "gatsby-plugin-offline": "^2.2.4",
-    "gatsby-plugin-react-helmet": "^3.1.2",
-    "gatsby-plugin-sharp": "^2.2.8",
-    "gatsby-plugin-typography": "^2.3.2",
-    "gatsby-remark-copy-linked-files": "^2.1.3",
-    "gatsby-remark-images": "^3.1.6",
-    "gatsby-remark-prismjs": "^3.3.3",
-    "gatsby-remark-responsive-iframe": "^2.2.4",
-    "gatsby-remark-smartypants": "^2.1.2",
-    "gatsby-source-filesystem": "^2.1.5",
-    "gatsby-transformer-remark": "^2.6.7",
-    "gatsby-transformer-sharp": "^2.2.4",
-    "global": "^4.4.0",
-    "prismjs": "^1.16.0",
-    "react": "^16.9.0",
-    "react-dom": "16.9.0",
+    "gatsby": "^2.16.3",
+    "gatsby-cli": "^2.8.1",
+    "gatsby-image": "^2.2.29",
+    "gatsby-plugin-feed": "^2.3.18",
+    "gatsby-plugin-google-analytics": "^2.1.23",
+    "gatsby-plugin-manifest": "^2.2.23",
+    "gatsby-plugin-offline": "^3.0.16",
+    "gatsby-plugin-react-helmet": "^3.1.13",
+    "gatsby-plugin-sharp": "^2.2.31",
+    "gatsby-plugin-typography": "^2.3.14",
+    "gatsby-remark-copy-linked-files": "^2.1.28",
+    "gatsby-remark-images": "^3.1.28",
+    "gatsby-remark-prismjs": "^3.3.20",
+    "gatsby-remark-responsive-iframe": "^2.2.25",
+    "gatsby-remark-smartypants": "^2.1.14",
+    "gatsby-source-filesystem": "^2.1.33",
+    "gatsby-transformer-remark": "^2.6.30",
+    "gatsby-transformer-sharp": "^2.2.23",
+    "prismjs": "^1.17.1",
     "react-helmet": "^5.2.1",
     "react-typography": "^0.16.19",
     "typeface-merriweather": "0.0.72",
@@ -44,14 +40,13 @@
     "typography-theme-wordpress-2016": "^0.16.19"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^4.1.0",
-    "@testing-library/react": "^9.1.3",
+    "@testing-library/jest-dom": "^4.1.2",
+    "@testing-library/react": "^9.3.0",
     "babel-jest": "^24.9.0",
-    "babel-preset-gatsby": "^0.2.8",
+    "babel-preset-gatsby": "^0.2.20",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
-    "prettier": "^1.18.2",
-    "react-test-renderer": "^16.8.6"
+    "prettier": "^1.18.2"
   },
   "homepage": "https://podtema.com",
   "keywords": [
@@ -67,7 +62,6 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write src/**/*.{js,jsx}",
-    "start": "npm run develop",
     "serve": "gatsby serve",
     "test": "jest --coverage && codecov",
     "lint": "eslint src/**/*.js",
