--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
   },
   "dependencies": {
     "@babel/preset-env": "^7.6.3",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/pro-light-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.7",
+    "@reach/router": "^1.2.1",
+    "auth0-js": "^9.11.3",
     "codecov": "^3.6.1",
     "eslint-config-prettier": "^6.4.0",
     "eslint-plugin-prettier": "^3.1.1",
+    "fontawesome": "^5.6.3",
     "gatsby": "^2.16.3",
     "gatsby-cli": "^2.8.1",
     "gatsby-image": "^2.2.29",
@@ -31,7 +37,9 @@
     "gatsby-transformer-remark": "^2.6.30",
     "gatsby-transformer-sharp": "^2.2.23",
     "prismjs": "^1.17.1",
+    "react-fontawesome": "^1.7.1",
     "react-helmet": "^5.2.1",
+    "react-icons": "^3.8.0",
     "react-typography": "^0.16.19",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75",
@@ -40,6 +48,7 @@
     "typography-theme-wordpress-2016": "^0.16.19"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-pro": "^5.11.2",
     "@testing-library/jest-dom": "^4.1.2",
     "@testing-library/react": "^9.3.0",
     "babel-jest": "^24.9.0",
