--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,5 @@
 {
+  "trailingComma": "es5",
   "semi": true,
-  "trailingComma": "all",
-  "singleQuote": true,
-  "printWidth": 70
+  "singleQuote": true
 }
