--- a/web/package.json
+++ b/web/package.json
@@ -8,6 +8,8 @@
     "url": "https://github.com/rosnovsky/podtemacom/issues"
   },
   "dependencies": {
+    "auth0-js": "^9.11.3",
+    "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-prettier": "^3.1.1",
     "gatsby": "^2.18.4",
     "gatsby-image": "^2.2.34",
@@ -56,6 +58,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "lint": "eslint --fix *.js src/**/*.js",
+    "test": "jest --coverage && codecov"
   }
 }
