--- a/web/package.json
+++ b/web/package.json
@@ -8,11 +8,13 @@
     "url": "https://github.com/rosnovsky/podtemacom/issues"
   },
   "dependencies": {
+    "@reach/router": "^1.2.1",
     "auth0-js": "^9.11.3",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-prettier": "^3.1.1",
     "gatsby": "^2.18.4",
     "gatsby-image": "^2.2.34",
+    "gatsby-plugin-create-client-paths": "^2.1.18",
     "gatsby-plugin-feed": "^2.3.22",
     "gatsby-plugin-google-analytics": "^2.1.29",
     "gatsby-plugin-manifest": "^2.2.30",
