--- a/web/package.json
+++ b/web/package.json
@@ -1,66 +1,27 @@
 {
-  "name": "evergreen-exclusive-content",
-  "private": true,
-  "description": "Evergreen podcast patron-only content",
-  "version": "0.1.0",
-  "author": "Artem Rosnovsky <artem@rosnovsky.us>",
-  "bugs": {
-    "url": "https://github.com/rosnovsky/podtemacom/issues"
-  },
-  "dependencies": {
-    "@reach/router": "^1.2.1",
-    "auth0-js": "^9.11.3",
-    "eslint-config-prettier": "^6.7.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "gatsby": "^2.18.4",
-    "gatsby-image": "^2.2.34",
-    "gatsby-plugin-create-client-paths": "^2.1.18",
-    "gatsby-plugin-feed": "^2.3.22",
-    "gatsby-plugin-google-analytics": "^2.1.29",
-    "gatsby-plugin-manifest": "^2.2.30",
-    "gatsby-plugin-offline": "^3.0.24",
-    "gatsby-plugin-react-helmet": "^3.1.16",
-    "gatsby-plugin-sharp": "^2.3.4",
-    "gatsby-plugin-typography": "^2.3.18",
-    "gatsby-remark-copy-linked-files": "^2.1.31",
-    "gatsby-remark-images": "^3.1.34",
-    "gatsby-remark-prismjs": "^3.3.25",
-    "gatsby-remark-responsive-iframe": "^2.2.28",
-    "gatsby-remark-smartypants": "^2.1.17",
-    "gatsby-source-filesystem": "^2.1.39",
-    "gatsby-transformer-remark": "^2.6.38",
-    "gatsby-transformer-sharp": "^2.3.6",
-    "prismjs": "^1.17.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1",
-    "react-typography": "^0.16.19",
-    "typeface-merriweather": "0.0.72",
-    "typeface-montserrat": "0.0.75",
-    "typography": "^0.16.19",
-    "typography-theme-wordpress-2016": "^0.16.19"
+  "name": "svelte-app",
+  "version": "1.0.0",
+  "scripts": {
+    "build": "rollup -c",
+    "dev": "rollup -c -w",
+    "start": "sirv public"
   },
   "devDependencies": {
-    "prettier": "^1.19.1"
+    "rollup": "^1.12.0",
+    "rollup-plugin-commonjs": "^10.0.0",
+    "rollup-plugin-livereload": "^1.0.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-svelte": "^5.0.3",
+    "rollup-plugin-terser": "^5.1.2",
+    "svelte": "^3.0.0"
   },
-  "homepage": "https://github.com/rosnovsky/podtemacom",
-  "keywords": [
-    "gatsby"
-  ],
-  "license": "MIT",
-  "main": "n/a",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/rosnovsky/podtemacom.git"
-  },
-  "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-    "start": "npm run develop",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "lint": "eslint --fix *.js src/**/*.js",
-    "test": "jest --coverage && codecov"
+  "dependencies": {
+    "apollo-boost": "^0.4.4",
+    "firebase": "^7.5.0",
+    "js-md5": "^0.7.3",
+    "node-fetch": "^2.6.0",
+    "sirv-cli": "^0.4.4",
+    "svelte-apollo": "^0.3.0",
+    "uuid": "^3.3.3"
   }
 }
