--- a/web/package.json
+++ b/web/package.json
@@ -16,8 +16,10 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.6.0",
     "apollo-boost": "^0.4.4",
     "firebase": "^7.5.0",
+    "graphql": "^14.5.8",
     "js-md5": "^0.7.3",
     "node-fetch": "^2.6.0",
     "sirv-cli": "^0.4.4",
