--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.6.0",
     "apollo-boost": "^0.4.4",
+    "auth0-js": "^9.11.3",
     "firebase": "^7.5.0",
     "graphql": "^14.5.8",
     "js-md5": "^0.7.3",
