--- a/web/package.json
+++ b/web/package.json
@@ -25,6 +25,7 @@
     "node-fetch": "^2.6.0",
     "sirv-cli": "^0.4.4",
     "svelte-apollo": "^0.3.0",
-    "uuid": "^3.3.3"
+    "uuid": "^3.3.3",
+    "whatwg-fetch": "^3.0.0"
   }
 }
