--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.6.0",
+    "@types/auth0-js": "^9.10.6",
     "apollo-boost": "^0.4.4",
     "auth0-js": "^9.11.3",
     "firebase": "^7.5.0",
@@ -25,6 +26,7 @@
     "node-fetch": "^2.6.0",
     "sirv-cli": "^0.4.4",
     "svelte-apollo": "^0.3.0",
+    "typescript": "^3.7.2",
     "uuid": "^3.3.3",
     "whatwg-fetch": "^3.0.0"
   }
